force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/VILigne_d_affaire_mensuelle__c.object-meta.xml
<CustomObject>
    <label>Ligne d&apos;affaire mensuelle</label>
    <nameField>
        <label>Ref de Ligne d&apos;affaire mensuelle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lignes d&apos;affaire mensuelles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>