force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Affaire__c.field-meta.xml
<CustomField>
    <fullName>Affaire__c</fullName>
    <label>Affaire</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipLabel>Lignes d&apos;affaire mensuelles</relationshipLabel>
    <relationshipName>Lignes_d_affaire_mensuelles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>