force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Affaire_a_fermer__c.field-meta.xml
<CustomField>
    <fullName>Affaire_a_fermer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affaire à fermer ?</label>
    <type>Checkbox</type>
</CustomField>