force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Affaire_a_recalculer__c.field-meta.xml
<CustomField>
    <fullName>Affaire_a_recalculer__c</fullName>
    <formula>LastModifiedDate&gt; Affaire__r.LastModifiedDate &amp;&amp; text(Periode_comptable__r.Statut__c) =&apos;20 Ouverte&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affaire à recalculer</label>
    <type>Checkbox</type>
</CustomField>