force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/AMP_E__c.field-meta.xml
<CustomField>
    <fullName>AMP_E__c</fullName>
    <label>AMP €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>