force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/CA_a_comptabiliser__c.field-meta.xml
<CustomField>
    <fullName>CA_a_comptabiliser__c</fullName>
    <formula>Total_CA_a_l_avancement__c - M_1_Total_CA_l_avancement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA à comptabiliser</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>