force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/CA_a_comptabiliserE__c.field-meta.xml
<CustomField>
    <fullName>CA_a_comptabiliserE__c</fullName>
    <label>CA à comptabiliser €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>