force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Chef_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_projet__c</fullName>
    <formula>Affaire__r.Chef_de_projet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chef de projet</label>
    <type>Text</type>
</CustomField>