force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Code_BU__c.field-meta.xml
<CustomField>
    <fullName>Code_BU__c</fullName>
    <formula>Affaire__r.Produit_SousDomaine__r.Code_BU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code BU</label>
    <type>Text</type>
</CustomField>