force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Code_sous_domaine__c.field-meta.xml
<CustomField>
    <fullName>Code_sous_domaine__c</fullName>
    <formula>Affaire__r.Produit_SousDomaine__r.Code_sous_domaine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code sous-domaine</label>
    <type>Text</type>
</CustomField>