force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Cout_terminaison_arrondi__c.field-meta.xml
<CustomField>
    <fullName>Cout_terminaison_arrondi__c</fullName>
    <formula>floor( Cout_terminaison_MontantI__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cout à terminaison arrondi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>