force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Cout_terminaison_Heure__c.field-meta.xml
<CustomField>
    <fullName>Cout_terminaison_Heure__c</fullName>
    <formula>Devis_Heure__c +  Ecart_C_A_F_Heure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coût à terminaison - Heure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>