force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Cout_terminaison_MontantD__c.field-meta.xml
<CustomField>
    <fullName>Cout_terminaison_MontantD__c</fullName>
    <formula>Devis_MontantD__c + Ecart_C_A_F_MontantD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coût à terminaison - MontantD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>