force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Date_de_fin_de_garantie__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_garantie__c</fullName>
    <formula>Affaire__r.Date_de_fin_de_garantie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin de garantie</label>
    <type>Date</type>
</CustomField>