force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Date_de_SAV_previsionnelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_SAV_previsionnelle__c</fullName>
    <formula>Affaire__r.Date_de_SAV_previsionnelle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de SAV prévisionnelle</label>
    <type>Date</type>
</CustomField>