force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Date_de_SAV_reelle_Debut_de_mois__c.field-meta.xml
<CustomField>
    <fullName>Date_de_SAV_reelle_Debut_de_mois__c</fullName>
    <formula>date( year(Affaire__r.Date_de_SAV_reelle__c), Month(Affaire__r.Date_de_SAV_reelle__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de SAV réelle (Début de mois)</label>
    <type>Date</type>
</CustomField>