force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Devis_Facture__c.field-meta.xml
<CustomField>
    <fullName>Devis_Facture__c</fullName>
    <formula>if( PV_Total__c =  PV_Facture__c ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Devis = Facturé ?</label>
    <type>Checkbox</type>
</CustomField>