force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Devis_Heure__c.field-meta.xml
<CustomField>
    <fullName>Devis_Heure__c</fullName>
    <label>Devis - Heure</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>