force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Devis_MontantI__c.field-meta.xml
<CustomField>
    <fullName>Devis_MontantI__c</fullName>
    <label>Devis - MontantI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>