force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Dont_Comptabilis_arrondi__c.field-meta.xml
<CustomField>
    <fullName>Dont_Comptabilis_arrondi__c</fullName>
    <formula>floor( Dont_comptabiliseI__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dont Comptabilisé arrondi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>