force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Dont_comptabiliseC_E__c.field-meta.xml
<CustomField>
    <fullName>Dont_comptabiliseC_E__c</fullName>
    <label>Dont comptabiliséC	€</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>