force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Dont_comptabiliseI_E__c.field-meta.xml
<CustomField>
    <fullName>Dont_comptabiliseI_E__c</fullName>
    <label>Dont comptabiliséI €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>