force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Ecart_C_A_F_MontantC_E__c.field-meta.xml
<CustomField>
    <fullName>Ecart_C_A_F_MontantC_E__c</fullName>
    <label>Ecart C.A.F - MontantC €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>