force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Ecart_RAD_MontantD__c.field-meta.xml
<CustomField>
    <fullName>Ecart_RAD_MontantD__c</fullName>
    <formula>Cout_terminaison_MontantD__c -  Ligne_d_affaire_mensuelle_precedente__r.Cout_terminaison_MontantD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecart RAD - MontantD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>