force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Ecart_RAD_Total__c.field-meta.xml
<CustomField>
    <fullName>Ecart_RAD_Total__c</fullName>
    <formula>PV_Total__c - Ligne_d_affaire_mensuelle_precedente__r.PV_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecart RAD Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>