force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Ecart_RAD_TotalE__c.field-meta.xml
<CustomField>
    <fullName>Ecart_RAD_TotalE__c</fullName>
    <formula>PV_TotalE__c - Ligne_d_affaire_mensuelle_precedente__r.PV_TotalE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecart RAD Total €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>