force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/EMM__c.field-meta.xml
<CustomField>
    <fullName>EMM__c</fullName>
    <label>EMM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>