force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Engage_brut_arrete_Heure__c.field-meta.xml
<CustomField>
    <fullName>Engage_brut_arrete_Heure__c</fullName>
    <label>Engagé brut à l&apos;arrêté - Heure</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>