force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Engage_brut_arrete_MontantD_E__c.field-meta.xml
<CustomField>
    <fullName>Engage_brut_arrete_MontantD_E__c</fullName>
    <label>Engagé brut à l&apos;arrêté - MontantD €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>