force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Engage_brut_l_arrete_arrondi__c.field-meta.xml
<CustomField>
    <fullName>Engage_brut_l_arrete_arrondi__c</fullName>
    <formula>floor( Engage_brut_arrete_MontantI__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagé brut à l&apos;arrêté arrondi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>