force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Etat_de_l_affaire__c.field-meta.xml
<CustomField>
    <fullName>Etat_de_l_affaire__c</fullName>
    <formula>text(Affaire__r.Etat_de_l_affaire__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etat de l&apos;affaire</label>
    <type>Text</type>
</CustomField>