force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/FOL_E__c.field-meta.xml
<CustomField>
    <fullName>FOL_E__c</fullName>
    <label>FOL €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>