force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Garantie_Depense__c.field-meta.xml
<CustomField>
    <fullName>Garantie_Depense__c</fullName>
    <label>Garantie - Dépenses cumulées</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>