force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Garantie_dotation_E__c.field-meta.xml
<CustomField>
    <fullName>Garantie_dotation_E__c</fullName>
    <label>Garantie - Dotation €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>