force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Garantie_Reprise_consommeeE__c.field-meta.xml
<CustomField>
    <fullName>Garantie_Reprise_consommeeE__c</fullName>
    <label>Garantie - Reprise consommée €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>