force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Garantie_reprise_E__c.field-meta.xml
<CustomField>
    <fullName>Garantie_reprise_E__c</fullName>
    <label>Garantie - Reprises cumulées €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>