force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Garantie_Reprise_mois_precedent_E__c.field-meta.xml
<CustomField>
    <fullName>Garantie_Reprise_mois_precedent_E__c</fullName>
    <formula>if( Ligne_d_affaire_mensuelle_precedente__r.Garantie_dotation_E__c &gt; Ligne_d_affaire_mensuelle_precedente__r.Garantie_Depense_E__c ,

   Ligne_d_affaire_mensuelle_precedente__r.Garantie_Depense_E__c ,

   
   Ligne_d_affaire_mensuelle_precedente__r.Garantie_dotation_E__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garantie - Reprise mois précédent €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>