force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Garantie_Reste_en_garantie__c.field-meta.xml
<CustomField>
    <fullName>Garantie_Reste_en_garantie__c</fullName>
    <formula>if(Garantie_dotation__c &gt;  Garantie_Depense__c &amp;&amp;  year(Periode_comptable__r.Date_de_debut__c)*100 + month(Periode_comptable__r.Date_de_debut__c)&lt; year( Affaire__r.Date_de_fin_de_garantie__c )*100 + month(Affaire__r.Date_de_fin_de_garantie__c ) 
, 
    Garantie_dotation__c  -  Garantie_Depense__c,
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garantie - Reste en garantie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>