force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Garantie_Solde_E__c.field-meta.xml
<CustomField>
    <fullName>Garantie_Solde_E__c</fullName>
    <formula>if( year(Periode_comptable__r.Date_de_debut__c)*100 + month(Periode_comptable__r.Date_de_debut__c)= year( Affaire__r.Date_de_fin_de_garantie__c )*100 + month(Affaire__r.Date_de_fin_de_garantie__c ) ,

if( Garantie_dotation_E__c &gt; Garantie_Depense_E__c,
Garantie_dotation_E__c - Garantie_Depense_E__c,
0
),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garantie - Solde à liquider €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>