force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Ligne_courante__c.field-meta.xml
<CustomField>
    <fullName>Ligne_courante__c</fullName>
    <formula>if(left( text(Periode_comptable__r.Statut__c) ,2)=&apos;20&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ligne courante</label>
    <type>Checkbox</type>
</CustomField>