force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Ligne_d_affaire_mens_exercice_precedent__c.field-meta.xml
<CustomField>
    <fullName>Ligne_d_affaire_mens_exercice_precedent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne d&apos;affaire mens exercice précédent</label>
    <referenceTo>VILigne_d_affaire_mensuelle__c</referenceTo>
    <relationshipLabel>Lignes d&apos;affaire mensuelles (Ligne d&apos;affaire mens exercice précédent)</relationshipLabel>
    <relationshipName>Lignes_d_affaire_mensuelles1</relationshipName>
    <type>Lookup</type>
</CustomField>