force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Ligne_d_affaire_mensuelle_precedente__c.field-meta.xml
<CustomField>
    <fullName>Ligne_d_affaire_mensuelle_precedente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne d&apos;affaire mensuelle précédente</label>
    <referenceTo>VILigne_d_affaire_mensuelle__c</referenceTo>
    <relationshipLabel>Lignes d&apos;affaire mensuelles</relationshipLabel>
    <relationshipName>Lignes_d_affaire_mensuelles</relationshipName>
    <type>Lookup</type>
</CustomField>