force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/M_1_Cout_terminaison_MontantI__c.field-meta.xml
<CustomField>
    <fullName>M_1_Cout_terminaison_MontantI__c</fullName>
    <formula>Ligne_d_affaire_mensuelle_precedente__r.Cout_terminaison_MontantI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(M-1) Coût à terminaison - MontantI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>