force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/M_1_Total_CA_l_avancement__c.field-meta.xml
<CustomField>
    <fullName>M_1_Total_CA_l_avancement__c</fullName>
    <formula>Ligne_d_affaire_mensuelle_precedente__r.Total_CA_a_l_avancement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(M -1) Total CA à l&apos;avancement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>