force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/M_1_Total_Pourcentage_d_avancement__c.field-meta.xml
<CustomField>
    <fullName>M_1_Total_Pourcentage_d_avancement__c</fullName>
    <formula>if(Ligne_d_affaire_mensuelle_precedente__c=null,null,Ligne_d_affaire_mensuelle_precedente__r.Total_Pourcentage_d_avancement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(M -1) Total Pourcentage d&apos;avancement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>