force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Marge_compta__c.field-meta.xml
<CustomField>
    <fullName>Marge_compta__c</fullName>
    <formula>Total_CA_a_l_avancement__c -  Dont_comptabiliseI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marge compta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>