force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Marge_Ecart_CAF__c.field-meta.xml
<CustomField>
    <fullName>Marge_Ecart_CAF__c</fullName>
    <label>Marge Ecart CAF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>