force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Marge_PV__c.field-meta.xml
<CustomField>
    <fullName>Marge_PV__c</fullName>
    <label>Marge PV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>