force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Marge_PV_Terminaison__c.field-meta.xml
<CustomField>
    <fullName>Marge_PV_Terminaison__c</fullName>
    <formula>Marge_PV__c -  Ecart_C_A_F_MontantI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marge PV Terminaison</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>