force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Marge_PV_terminaisonE__c.field-meta.xml
<CustomField>
    <fullName>Marge_PV_terminaisonE__c</fullName>
    <formula>Marge_PVE__c -   Ecart_C_A_F_MontantI_E__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marge PV à terminaison €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>