force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Marge_PVE__c.field-meta.xml
<CustomField>
    <fullName>Marge_PVE__c</fullName>
    <label>Marge PV €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>