force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Marge_revisee__c.field-meta.xml
<CustomField>
    <fullName>Marge_revisee__c</fullName>
    <formula>PV_Total__c - Cout_terminaison_MontantI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marge révisée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>