force-app/main/default/objects/VILigne_d_affaire_mensuelle__c/fields/Periode_comptable__c.field-meta.xml
<CustomField>
    <fullName>Periode_comptable__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Période comptable</label>
    <referenceTo>VIPeriode__c</referenceTo>
    <relationshipLabel>Lignes d&apos;affaire mensuelles</relationshipLabel>
    <relationshipName>Lignes_d_affaire_mensuelles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>